# vasca

./: .buildinfo  .env_template  .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  README.md  README.rst  conda_env.yml  genindex.html  getting_started.html  index.html  installation_guide.html  objects.inv  py-modindex.html  pyproject.toml  region.py  requirements.txt  search.html  searchindex.js  setup.py  tippy_wiki_cache.json
.doctrees/: getting_started.doctree  index.doctree  installation_guide.doctree
.doctrees/api/: index.doctree
.doctrees/tutorials/: index.doctree  simple_example.doctree  test_table.doctree  tutorial_field.doctree  tutorial_gal_vis.doctree  tutorial_mast.doctree  tutorial_pipe.doctree  tutorial_rm.doctree  tutorial_var_stats.doctree
.doctrees/user_guide/: configuration.doctree  data_model.doctree  index.doctree  instruments.doctree  pipeline.doctree  post_processing.doctree
.github/workflows/: ci.yml  docs.yml  pypi.yml
_downloads/607c77065a7574b1630e4ec4ced8df4f/: .env_template
_modules/: index.html
_modules/vasca/: columns.html  field.html  region.html  resource_manager.html  source.html  tables.html  utils.html  vasca_pipe.html  visualization.html
_sources/: getting_started.md.txt  index.md.txt
_sources/api/: index.rst.txt
_sources/tutorials/: index.md.txt  simple_example.md.txt  tutorial_pipe.md.txt  tutorial_var_stats.md.txt
_sources/user_guide/: configuration.md.txt  data_model.md.txt  index.md.txt
_static/: documentation_options.js
_static/tippy/: getting_started.071cdeb2-423d-4be7-a1a0-282c1176c1ac.js  getting_started.0acb6cf8-c7be-4c98-8684-184f0e1ecfda.js  getting_started.2325f7db-fad5-4f49-a567-da6bdccb8dda.js  getting_started.27614ca1-d238-45a9-b297-4ced21f8f480.js  getting_started.28aabbd6-2a08-4178-8acb-b02058113e2f.js  getting_started.3fd8925f-3f6c-465e-8fe8-7c63bd90c591.js  getting_started.474787e1-d49a-42c5-b887-f2ac9efd24db.js  getting_started.6ede38b0-9287-44c4-b827-15a9c8dcde72.js  getting_started.7656ab4f-4dc1-4bb4-ac6d-f9bd50d3fa30.js  getting_started.7cb0be65-f36b-4abc-876f-498b267b693e.js  getting_started.8d28f8d4-df6e-4200-8d05-e863ae2a79a1.js  getting_started.93d82e7a-abc0-4543-b181-652d0c356ba9.js  getting_started.98824373-be1b-4e6a-af0b-39d79c8d0c34.js  getting_started.9ef8564c-5cb9-42ae-bcf9-297b89b3d3f2.js  getting_started.a4e1a36b-fa02-472a-83e4-77c3419090b7.js  getting_started.b28d6be1-322e-4bae-b78a-732caa804829.js  getting_started.f5d67571-5070-4109-be5a-c841ba87ed13.js  getting_started.f60fb1e8-3093-4526-bc58-84062c50931e.js  index.01da33b5-e11d-4efe-962d-3e31c4bd6605.js  index.04287783-f19d-47c0-9bbf-85b8984e5a1c.js  index.1fae66b5-1f18-46c0-a039-4972af0af4fd.js  index.37e088ce-d71c-49a7-b442-2597bccaba09.js  index.48c60fb0-169a-499d-83f4-7b4aa2d6e467.js  index.54d38962-721e-41d2-958f-a413726f36c0.js  index.5a3aa8ee-73ff-4f6e-be35-f792e0a2cfb2.js  index.77b6532e-62a1-4b21-98b2-71aa6e795eed.js  index.9c16069b-3eda-4d1e-bc00-d3c196439b11.js  index.9cdb6a82-a826-468b-a7d9-54e949ba0222.js  index.b72c206e-f519-4b03-9198-61e0f9aa4be5.js  index.c2fb7d56-2ffe-4d59-abd5-1dfd274e2b66.js  index.cda235a2-c5d9-49e3-8abb-69e924b82735.js  index.e3aefc9b-71c6-4ddb-b63f-4b384f332e0d.js  index.e59b9e44-69fc-4f0a-b7f5-0c50f0dd9f95.js  index.ed026d63-bb06-4634-810c-63eac70e5f77.js  index.f484e02f-b582-45c1-8587-11245b90d4a3.js  index.fab58c2e-5730-4a7c-96c7-bebf3af8e270.js
api/: index.html
api/vasca/: vasca._version.html  vasca.columns.html  vasca.field.html  vasca.html  vasca.region.html  vasca.resource_manager.html  vasca.source.html  vasca.tables.html  vasca.tables_dict.html  vasca.utils.html  vasca.vasca_pipe.html  vasca.visualization.html
docs/: conf.py  getting_started.md  index.md  index.rst  installation_guide.md  modules.rst  readme_link.rst
docs/tutorials/: index.md  simple_example.py  test_table.md  test_table.py  tutorial_field.md  tutorial_field.py  tutorial_gal_vis.md  tutorial_gal_vis.py  tutorial_mast.md  tutorial_mast.py  tutorial_pipe.md  tutorial_pipe.py  tutorial_rm.md  tutorial_rm.py  tutorial_var_stats.md  tutorial_var_stats.py
docs/user_guide/: configuration.md  data_model.md  index.md  instruments.md  pipeline.md  post_processing.md
tutorials/: index.html  simple_example.html  test_table.html  tutorial_field.html  tutorial_gal_vis.html  tutorial_mast.html  tutorial_pipe.html  tutorial_rm.html  tutorial_var_stats.html
user_guide/: configuration.html  data_model.html  index.html  instruments.html  pipeline.html  post_processing.html
uvva/: __init__.py  field.py  gField.py  pipeline.py  pipeline_cfg.toml  pipeline_cfg.yml  region.py  resource_manager.py  tables.py  tables_dict.py  utils.py  uvva.py  uvva_cfg.toml  uvva_cfg.yaml  uvva_pipe.py  uvva_table.py  uvva_tables.py  uvva_tables_auto_gen.yml
uvva/examples/: debug_clustering.ipynb  test_GALEXField.ipynb  test_GALEXField.py  test_clustering.ipynb  uvva_pipe_example.ipynb  uvva_pipe_example_cfg.ipynb  uvva_pipe_example_cfg.yaml
uvva/mpl_style_sheets/: new_seaborn_whitegrid_notebook.mplstyle  spie_scout_testing.mplstyle
uvva/resource_metadata/: resource_catalog.yml  resource_envs.yml
uvva/test/: test_field.py  test_rm_config_files.py  uvva_test_cfg.yaml
vasca/: __init__.py  acms_api.py  columns.py  field.py  field_ids.yaml  field_ids_GCK.yaml  field_ids_TDS.yaml  region.py  resource_manager.py  source.py  tables.py  tables_dict.py  utils.py  vasca_cfg.yaml  vasca_cfg_GCK.yaml  vasca_cfg_TDS.yaml  vasca_pipe.py  visualization.py  xmatch.py
vasca/examples/: compare_TDS_VASCA.ipynb  compare_TDS_VASCA_Julian.ipynb  compare_TDS_VASCA_Rolf.ipynb  convert_rg_src_ids.ipynb  create_pubcat.ipynb  cross_match.ipynb  debug_clustering.ipynb  display_sources.ipynb  inspect_GALEX.ipynb  inspect_MVWD.ipynb  inspect_TDS.ipynb  inspect_ZTF.ipynb  inspect_artifacts.ipynb  inspect_diagnostics.ipynb  inspect_gPhoton.ipynb  inspect_gcat.ipynb  inspect_match_distance.ipynb  inspect_matches.ipynb  inspect_periods.ipynb  inspect_sed.ipynb  inspect_source_distributions.ipynb  inspect_sources.ipynb  mag2flux.ipynb  query_GALEX.ipynb  (+14 more)
(+466 files in other folders)
