[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.

[project]
# Project metadata, following PEP 621 specifications.
name = "uvva"
version = "0.0.1"
description = "Ultraviolet Variability Analysis is an astronomy pipeline for time-variable sources."
long_description = "README.rst"
requires_python = ">=3.9"
# license = {file = "LICENSE.txt"}
keywords = ["astronomy", "ultraviolet", "pipeline"]
authors = [
    {name =  "Julian Schliwinski", email = "julian.schliwinski@desy.de"},
    {name = "Rolf Bühler"},
    {name = "Andrea Porelli"},
]
dependencies = [
  "astropy ~= 5.0.2",
  "astroquery ~= 0.4.6",
  "coverage ~= 6.3.2",
  "healpy ~= 1.15.2",
  "loguru ~= 0.6.0",
  "matplotlib ~= 3.5.1",
  "numpy ~= 1.22.3",
  "pandas ~= 1.4.1",
  "pytest ~= 7.1.1",
  "python-dotenv ~= 0.19.2",
  "PyYAML ~= 6.0",
  "scikit_learn ~= 1.0.2",
  "setuptools ~= 58.0.4",
]

[project.urls]
homepage = "https://tbd.desy.de"
documentation = "https://tbd.desy.de"
repository = "https://gitlab.desy.de/ultrasat-camera/uc_uvva"
changelog = "https://tbd.desy.de"

[tool.setuptools]
packages = ["uvva"]

[tool.pytest.ini_options]
# Pytest settings (https://docs.pytest.org/en/6.2.x/reference.html#configuration-options)
minversion = "6.0"
addopts = "-v"
testpaths = ["uvva/test"]
# log_file = "logs/pytest-logs.txt"
# log_file_level = "INFO"
log_cli = true
# log_cli_level = "INFO"

[tool.isort]
# Black-Isort compatibility (https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort)
# could be replaced by 'profile = "black"' for isort versions >=5.0.0
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88