[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.

[project]
# Project metadata, following PEP 621 specifications.
name = "vasca"
version = "0.1.0"
description = "Ultraviolet Variability Analysis is an astronomy pipeline for time-variable sources."
readme = "README.rst"
requires-python = ">=3.9"
# license = {file = "LICENSE.txt"}
keywords = ["astronomy", "ultraviolet", "pipeline"]
authors = [
    {name =  "Julian Schliwinski", email = "julian.schliwinski@desy.de"},
    {name = "Rolf Bühler", email = "rolf.buehler@desy.de"},
    {name = "Andrea Porelli", email = "andrea.porelli@desy.de"},
]
dependencies = [
  "astropy ~= 5.3",
  "astroquery ~= 0.4.6",
  "coverage ~= 7.2.7",
  "healpy ~= 1.16.2",
  "loguru ~= 0.7.0",
  "matplotlib ~= 3.7.1",
  "numpy ~= 1.24.3",
  "pandas ~= 2.0.2",
  "pytest ~= 7.3.1",
  "pytest-cov ~= 4.1.0",
  "python-dotenv ~= 1.0.0",
  "PyYAML ~= 6.0",
  "scikit-learn ~= 1.3.0",
  "setuptools ~= 67.8.0",
  "regions ~= 0.7",
  "pyyaml-include ~= 1.3",
  "ipywidgets ~= 8.0.6",
  "ipympl ~= 0.9.3",
  "jupyterlab ~= 4.0.2",
]

[project.urls]
homepage = "https://tbd.desy.de"
documentation = "https://tbd.desy.de"
repository = "https://gitlab.desy.de/ultrasat-camera/uc_vasca"
changelog = "https://tbd.desy.de"

[tool.setuptools]
packages = ["vasca"]

[tool.pytest.ini_options]
# Pytest settings (https://docs.pytest.org/en/6.2.x/reference.html#configuration-options)
minversion = "6.0"
addopts = "-v"
testpaths = ["vasca/test"]
# log_file = "logs/pytest-logs.txt"
# log_file_level = "INFO"
log_cli = true
# log_cli_level = "INFO"

[tool.isort]
# Black-Isort compatibility (https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort)
# could be replaced by 'profile = "black"' for isort versions >=5.0.0
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
